@@ -1,6 +1,8 @@
 package com.DriverSessions;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.testng.annotations.Test;
@@ -11,7 +13,7 @@ import io.appium.java_client.android.options.UiAutomator2Options;
 
 public class CreateSessionWithUiAutomatior2OptionsClass {
   @Test
-  public void testDriverSession() throws MalformedURLException
+  public void testDriverSession() throws MalformedURLException, URISyntaxException
    {
 	  //session info
 	  UiAutomator2Options option=new UiAutomator2Options();
@@ -21,7 +23,9 @@ public class CreateSessionWithUiAutomatior2OptionsClass {
 	  
 	  
 	  //server details
-	  URL url=new URL("http://0.0.0.0:4723");
+	  //URL url=new URL("http://0.0.0.0:4723");
+	  
+	  URL url=new URI("http://0.0.0.0:4723").toURL();
 	  
 	  //craete  appium driver session
 	  AppiumDriver driver=new AndroidDriver(url,option);
